avoid horizontal scrolling

--- a/src/app.css
+++ b/src/app.css
@@ -6,5 +6,7 @@
 	}
 }
 
-body {
+html, body {
+	width: 100%;
+	overflow-x: hidden;
 }
